made pre-adaptive for for-clients

--- a/src/for-clients.html
+++ b/src/for-clients.html
@@ -51,65 +51,156 @@
     </section>
     <section class="catalog">
         <div class="catalog__group">
-            <div class="catalog__group-wrapper">
-                <ul class="catalog__list">
-                    <li class="catalog__list-item">
-                        <div class="catalog__list-img">
-                            <img src="@icons/for-clients/supermarket.svg" alt="supermarket">
-                        </div>
-                        <div class="catalog__list-title">
-                            Крупные <br>
-                            супермаркеты
-                        </div>
-                    </li>
-                    <li class="catalog__list-item">
-                        <div class="catalog__list-img">
-                            <img src="@icons/for-clients/shop.svg" alt="shop">
-                        </div>
-                        <div class="catalog__list-title">
-                            Розничные <br>
-                            магазины
-                        </div>
-                    </li>
-                    <li class="catalog__list-item">
-                        <div class="catalog__list-img">
-                            <img src="@icons/for-clients/dinner-table.svg" alt="dinner-table">
-                        </div>
-                        <div class="catalog__list-title">
-                            Компании <br>
-                            HoReCa
-                        </div>
-                    </li>
-                    <li class="catalog__list-item">
-                        <div class="catalog__list-img">
-                            <img src="@icons/for-clients/dumbbell.svg" alt="dumbbell">
-                        </div>
-                        <div class="catalog__list-title">
-                            Фитнес <br>
-                            и спорт клубы
-                        </div>
-                    </li>
-                    <li class="catalog__list-item">
-                        <div class="catalog__list-img">
-                            <img src="@icons/for-clients/cake.svg" alt="cake">
-                        </div>
-                        <div class="catalog__list-title">
-                            Кондитерские <br>
-                            и пекарни
-                        </div>
-                    </li>
-                </ul>
-            </div>
+            <ul class="catalog__list">
+                <li class="catalog__list-item catalog__list-item_active" data-catalogId="1">
+                    <div class="catalog__list-img">
+                        <img src="@icons/for-clients/supermarket.svg" alt="supermarket">
+                    </div>
+                    <div class="catalog__list-title">
+                        Крупные <br>
+                        супермаркеты
+                    </div>
+                </li>
+                <li class="catalog__list-item" data-catalogId="2">
+                    <div class="catalog__list-img">
+                        <img src="@icons/for-clients/shop.svg" alt="shop">
+                    </div>
+                    <div class="catalog__list-title">
+                        Розничные <br>
+                        магазины
+                    </div>
+                </li>
+                <li class="catalog__list-item" data-catalogId="3">
+                    <div class="catalog__list-img">
+                        <img src="@icons/for-clients/dinner-table.svg" alt="dinner-table">
+                    </div>
+                    <div class="catalog__list-title">
+                        Компании <br>
+                        HoReCa
+                    </div>
+                </li>
+                <li class="catalog__list-item" data-catalogId="4">
+                    <div class="catalog__list-img">
+                        <img src="@icons/for-clients/dumbbell.svg" alt="dumbbell">
+                    </div>
+                    <div class="catalog__list-title">
+                        Фитнес <br>
+                        и спорт клубы
+                    </div>
+                </li>
+                <li class="catalog__list-item" data-catalogId="5">
+                    <div class="catalog__list-img">
+                        <img src="@icons/for-clients/cake.svg" alt="cake">
+                    </div>
+                    <div class="catalog__list-title">
+                        Кондитерские <br>
+                        и пекарни
+                    </div>
+                </li>
+            </ul>
         </div>
         <div class="catalog__divider"></div>
         <div class="catalog__tabs">
-            <div class="catalog__tab">
-                <div class="catalog__tab-wrapper">
-                    <div class="catalog__tab-descr"></div>
-                    <a href="#" class="catalog__tab-link">Написать нам</a>
+            <div class="catalog__tabs-wrapper">
+                <div class="catalog__tab">
+                    <div class="catalog__tab-wrapper">
+                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные условия
+                            сорудничества. <br><br>
+                            Мы готовы рассмотреть особые
+                            условия для оптовых покупателей, с готовностью идем на встречу
+                            к любому предложению. <br><br>
+                            Особые условия подготовленны для розничных магазинов.
+                            компаний HoReCa, спорт-клубов. <br><br>
+                            Если вы заинтересованы в нашей продукции, пишите
+                            или звоните
+                            в наш главный офис, мы всегда пойдем <br>
+                            вам на встречу.
+                        </div>
+                        <a href="#" class="catalog__tab-link">Написать нам</a>
+                    </div>
+                    <div class="catalog__tab-img">
+                        <img src="@img/for-clients/market.png" alt="market">
+                    </div>
                 </div>
-                <div class="catalog__tab-img">
-                    <img src="@img/for-clients/market.png" alt="market">
+                <div class="catalog__tab">
+                    <div class="catalog__tab-wrapper">
+                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные условия
+                            сорудничества. <br><br>
+                            Мы готовы рассмотреть особые
+                            условия для оптовых покупателей, с готовностью идем на встречу
+                            к любому предложению. <br><br>
+                            Особые условия подготовленны для розничных магазинов.
+                            компаний HoReCa, спорт-клубов. <br><br>
+                            Если вы заинтересованы в нашей продукции, пишите
+                            или звоните
+                            в наш главный офис, мы всегда пойдем <br>
+                            вам на встречу.
+                        </div>
+                        <a href="#" class="catalog__tab-link">Написать нам</a>
+                    </div>
+                    <div class="catalog__tab-img">
+                        <img src="@img/for-clients/market.png" alt="market">
+                    </div>
+                </div>
+                <div class="catalog__tab">
+                    <div class="catalog__tab-wrapper">
+                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные условия
+                            сорудничества. <br><br>
+                            Мы готовы рассмотреть особые
+                            условия для оптовых покупателей, с готовностью идем на встречу
+                            к любому предложению. <br><br>
+                            Особые условия подготовленны для розничных магазинов.
+                            компаний HoReCa, спорт-клубов. <br><br>
+                            Если вы заинтересованы в нашей продукции, пишите
+                            или звоните
+                            в наш главный офис, мы всегда пойдем <br>
+                            вам на встречу.
+                        </div>
+                        <a href="#" class="catalog__tab-link">Написать нам</a>
+                    </div>
+                    <div class="catalog__tab-img">
+                        <img src="@img/for-clients/market.png" alt="market">
+                    </div>
+                </div>
+                <div class="catalog__tab">
+                    <div class="catalog__tab-wrapper">
+                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные условия
+                            сорудничества. <br><br>
+                            Мы готовы рассмотреть особые
+                            условия для оптовых покупателей, с готовностью идем на встречу
+                            к любому предложению. <br><br>
+                            Особые условия подготовленны для розничных магазинов.
+                            компаний HoReCa, спорт-клубов. <br><br>
+                            Если вы заинтересованы в нашей продукции, пишите
+                            или звоните
+                            в наш главный офис, мы всегда пойдем <br>
+                            вам на встречу.
+                        </div>
+                        <a href="#" class="catalog__tab-link">Написать нам</a>
+                    </div>
+                    <div class="catalog__tab-img">
+                        <img src="@img/for-clients/market.png" alt="market">
+                    </div>
+                </div>
+                <div class="catalog__tab">
+                    <div class="catalog__tab-wrapper">
+                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные условия
+                            сорудничества. <br><br>
+                            Мы готовы рассмотреть особые
+                            условия для оптовых покупателей, с готовностью идем на встречу
+                            к любому предложению. <br><br>
+                            Особые условия подготовленны для розничных магазинов.
+                            компаний HoReCa, спорт-клубов. <br><br>
+                            Если вы заинтересованы в нашей продукции, пишите
+                            или звоните
+                            в наш главный офис, мы всегда пойдем <br>
+                            вам на встречу.
+                        </div>
+                        <a href="#" class="catalog__tab-link">Написать нам</a>
+                    </div>
+                    <div class="catalog__tab-img">
+                        <img src="@img/for-clients/market.png" alt="market">
+                    </div>
                 </div>
             </div>
         </div>
@@ -119,6 +210,7 @@
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
     <script src="js/script.eco.js"></script>
+    <script src="js/script.catalog.js"></script>
 </body>
 
 </html>
