need do adaptive for-clints

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -95,7 +95,7 @@
                 <a href="#" class="footer__list-link">Магазин</a>
             </li>
             <li class="footer__list-item">
-                <a href="#" class="footer__list-link">Корпоративным клиентам</a>
+                <a href="@html/for-clients.html" class="footer__list-link">Корпоративным клиентам</a>
             </li>
             <li class="footer__list-item">
                 <a href="#" class="footer__list-link">Оплата и доставка</a>
