Made a payment page

--- a/src/about-company.html
+++ b/src/about-company.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>О компании</title>
     @@include('html/head.html', {})
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.about-company.min.css">
 </head>
 
@@ -71,6 +72,7 @@
     @@include('html/mini-news.html')
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/script.about-manuf.js"></script>
     <script src="js/script.eco.js"></script>
     <script src="js/script.mini-news.js"></script>
