--- a/src/for-clients.html
+++ b/src/for-clients.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оптовым и корпоративным клиентам</title>
     @@include('html/head.html', {})
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.for-clients.min.css">
 </head>
 
-<body>@@include('html/header.html', {})
+<body>
+    @@include('html/header.html', {})
     <section class="promo">
         <div class="promo__bg-img">
             <img src="@img/for-clients/walnut-bg.png" alt="garden" loading="lazy">
@@ -104,7 +106,8 @@
             <div class="catalog__tabs-wrapper">
                 <div class="catalog__tab">
                     <div class="catalog__tab-wrapper">
-                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные условия
+                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
+                            условия
                             сорудничества. <br><br>
                             Мы готовы рассмотреть особые
                             условия для оптовых покупателей, с готовностью идем на встречу
@@ -124,7 +127,8 @@
                 </div>
                 <div class="catalog__tab">
                     <div class="catalog__tab-wrapper">
-                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные условия
+                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
+                            условия
                             сорудничества. <br><br>
                             Мы готовы рассмотреть особые
                             условия для оптовых покупателей, с готовностью идем на встречу
@@ -144,7 +148,8 @@
                 </div>
                 <div class="catalog__tab">
                     <div class="catalog__tab-wrapper">
-                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные условия
+                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
+                            условия
                             сорудничества. <br><br>
                             Мы готовы рассмотреть особые
                             условия для оптовых покупателей, с готовностью идем на встречу
@@ -164,7 +169,8 @@
                 </div>
                 <div class="catalog__tab">
                     <div class="catalog__tab-wrapper">
-                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные условия
+                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
+                            условия
                             сорудничества. <br><br>
                             Мы готовы рассмотреть особые
                             условия для оптовых покупателей, с готовностью идем на встречу
@@ -184,7 +190,8 @@
                 </div>
                 <div class="catalog__tab">
                     <div class="catalog__tab-wrapper">
-                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные условия
+                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
+                            условия
                             сорудничества. <br><br>
                             Мы готовы рассмотреть особые
                             условия для оптовых покупателей, с готовностью идем на встречу
@@ -209,6 +216,7 @@
     @@include('html/eco.html', {})
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/script.eco.js"></script>
     <script src="js/script.catalog.js"></script>
 </body>
