--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -98,7 +98,7 @@
                 <a href="@html/for-clients.html" class="footer__list-link">Корпоративным клиентам</a>
             </li>
             <li class="footer__list-item">
-                <a href="#" class="footer__list-link">Оплата и доставка</a>
+                <a href="@html/payment.html" class="footer__list-link">Оплата и доставка</a>
             </li>
             <li class="footer__list-item">
                 <a href="@html/about-company.html" class="footer__list-link">О производстве</a>
