--- a/src/html/header.html
+++ b/src/html/header.html
@@ -54,7 +54,7 @@
         <ul class="sidemenu__list">
             <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Магазин</a></li>
             <li class="sidemenu__list-item"><a href="@html/about-company.html" class="sidemenu__list-link">О производстве</a></li>
-            <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Оплата и доставка</a></li>
+            <li class="sidemenu__list-item"><a href="@html/payment.html" class="sidemenu__list-link">Оплата и доставка</a></li>
             <li class="sidemenu__list-item"><a href="@html/for-clients.html" class="sidemenu__list-link">Оптовым и корпоративным клиентам</a>
             </li>
             <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Новости и статьи</a></li>
@@ -188,7 +188,7 @@
                         </a>
                     </li>
                     <li class="header__list-item">
-                        <a href="#" class="header__list-link">Оплата и доставка</a>
+                        <a href="@html/payment.html" class="header__list-link">Оплата и доставка</a>
                     </li>
                     <li class="header__list-item">
                         <a href="@html/for-clients.html" class="header__list-link">Оптовым и корпоративным клиентам</a>
