corrected the tabs

--- a/src/for-clients.html
+++ b/src/for-clients.html
@@ -103,111 +103,109 @@
         </div>
         <div class="catalog__divider"></div>
         <div class="catalog__tabs">
-            <div class="catalog__tabs-wrapper">
-                <div class="catalog__tab">
-                    <div class="catalog__tab-wrapper">
-                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
-                            условия
-                            сорудничества. <br><br>
-                            Мы готовы рассмотреть особые
-                            условия для оптовых покупателей, с готовностью идем на встречу
-                            к любому предложению. <br><br>
-                            Особые условия подготовленны для розничных магазинов.
-                            компаний HoReCa, спорт-клубов. <br><br>
-                            Если вы заинтересованы в нашей продукции, пишите
-                            или звоните
-                            в наш главный офис, мы всегда пойдем <br>
-                            вам на встречу.
-                        </div>
-                        <a href="#" class="catalog__tab-link">Написать нам</a>
+            <div class="catalog__tab catalog__tab_active">
+                <div class="catalog__tab-wrapper">
+                    <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
+                        условия
+                        сорудничества. <br><br>
+                        Мы готовы рассмотреть особые
+                        условия для оптовых покупателей, с готовностью идем на встречу
+                        к любому предложению. <br><br>
+                        Особые условия подготовленны для розничных магазинов.
+                        компаний HoReCa, спорт-клубов. <br><br>
+                        Если вы заинтересованы в нашей продукции, пишите
+                        или звоните
+                        в наш главный офис, мы всегда пойдем <br>
+                        вам на встречу.
                     </div>
-                    <div class="catalog__tab-img">
-                        <img src="@img/for-clients/market.png" alt="market">
-                    </div>
+                    <a href="#" class="catalog__tab-link">Написать нам</a>
                 </div>
-                <div class="catalog__tab">
-                    <div class="catalog__tab-wrapper">
-                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
-                            условия
-                            сорудничества. <br><br>
-                            Мы готовы рассмотреть особые
-                            условия для оптовых покупателей, с готовностью идем на встречу
-                            к любому предложению. <br><br>
-                            Особые условия подготовленны для розничных магазинов.
-                            компаний HoReCa, спорт-клубов. <br><br>
-                            Если вы заинтересованы в нашей продукции, пишите
-                            или звоните
-                            в наш главный офис, мы всегда пойдем <br>
-                            вам на встречу.
-                        </div>
-                        <a href="#" class="catalog__tab-link">Написать нам</a>
-                    </div>
-                    <div class="catalog__tab-img">
-                        <img src="@img/for-clients/market.png" alt="market">
-                    </div>
+                <div class="catalog__tab-img">
+                    <img src="@img/for-clients/market.png" alt="market">
                 </div>
-                <div class="catalog__tab">
-                    <div class="catalog__tab-wrapper">
-                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
-                            условия
-                            сорудничества. <br><br>
-                            Мы готовы рассмотреть особые
-                            условия для оптовых покупателей, с готовностью идем на встречу
-                            к любому предложению. <br><br>
-                            Особые условия подготовленны для розничных магазинов.
-                            компаний HoReCa, спорт-клубов. <br><br>
-                            Если вы заинтересованы в нашей продукции, пишите
-                            или звоните
-                            в наш главный офис, мы всегда пойдем <br>
-                            вам на встречу.
-                        </div>
-                        <a href="#" class="catalog__tab-link">Написать нам</a>
+            </div>
+            <div class="catalog__tab">
+                <div class="catalog__tab-wrapper">
+                    <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
+                        условия
+                        сорудничества. <br><br>
+                        Мы готовы рассмотреть особые
+                        условия для оптовых покупателей, с готовностью идем на встречу
+                        к любому предложению. <br><br>
+                        Особые условия подготовленны для розничных магазинов.
+                        компаний HoReCa, спорт-клубов. <br><br>
+                        Если вы заинтересованы в нашей продукции, пишите
+                        или звоните
+                        в наш главный офис, мы всегда пойдем <br>
+                        вам на встречу.
                     </div>
-                    <div class="catalog__tab-img">
-                        <img src="@img/for-clients/market.png" alt="market">
-                    </div>
+                    <a href="#" class="catalog__tab-link">Написать нам</a>
                 </div>
-                <div class="catalog__tab">
-                    <div class="catalog__tab-wrapper">
-                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
-                            условия
-                            сорудничества. <br><br>
-                            Мы готовы рассмотреть особые
-                            условия для оптовых покупателей, с готовностью идем на встречу
-                            к любому предложению. <br><br>
-                            Особые условия подготовленны для розничных магазинов.
-                            компаний HoReCa, спорт-клубов. <br><br>
-                            Если вы заинтересованы в нашей продукции, пишите
-                            или звоните
-                            в наш главный офис, мы всегда пойдем <br>
-                            вам на встречу.
-                        </div>
-                        <a href="#" class="catalog__tab-link">Написать нам</a>
-                    </div>
-                    <div class="catalog__tab-img">
-                        <img src="@img/for-clients/market.png" alt="market">
-                    </div>
+                <div class="catalog__tab-img">
+                    <img src="@img/for-clients/market.png" alt="market">
                 </div>
-                <div class="catalog__tab">
-                    <div class="catalog__tab-wrapper">
-                        <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
-                            условия
-                            сорудничества. <br><br>
-                            Мы готовы рассмотреть особые
-                            условия для оптовых покупателей, с готовностью идем на встречу
-                            к любому предложению. <br><br>
-                            Особые условия подготовленны для розничных магазинов.
-                            компаний HoReCa, спорт-клубов. <br><br>
-                            Если вы заинтересованы в нашей продукции, пишите
-                            или звоните
-                            в наш главный офис, мы всегда пойдем <br>
-                            вам на встречу.
-                        </div>
-                        <a href="#" class="catalog__tab-link">Написать нам</a>
+            </div>
+            <div class="catalog__tab">
+                <div class="catalog__tab-wrapper">
+                    <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
+                        условия
+                        сорудничества. <br><br>
+                        Мы готовы рассмотреть особые
+                        условия для оптовых покупателей, с готовностью идем на встречу
+                        к любому предложению. <br><br>
+                        Особые условия подготовленны для розничных магазинов.
+                        компаний HoReCa, спорт-клубов. <br><br>
+                        Если вы заинтересованы в нашей продукции, пишите
+                        или звоните
+                        в наш главный офис, мы всегда пойдем <br>
+                        вам на встречу.
                     </div>
-                    <div class="catalog__tab-img">
-                        <img src="@img/for-clients/market.png" alt="market">
+                    <a href="#" class="catalog__tab-link">Написать нам</a>
+                </div>
+                <div class="catalog__tab-img">
+                    <img src="@img/for-clients/walnut-bg.png" alt="market">
+                </div>
+            </div>
+            <div class="catalog__tab">
+                <div class="catalog__tab-wrapper">
+                    <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
+                        условия
+                        сорудничества. <br><br>
+                        Мы готовы рассмотреть особые
+                        условия для оптовых покупателей, с готовностью идем на встречу
+                        к любому предложению. <br><br>
+                        Особые условия подготовленны для розничных магазинов.
+                        компаний HoReCa, спорт-клубов. <br><br>
+                        Если вы заинтересованы в нашей продукции, пишите
+                        или звоните
+                        в наш главный офис, мы всегда пойдем <br>
+                        вам на встречу.
                     </div>
+                    <a href="#" class="catalog__tab-link">Написать нам</a>
+                </div>
+                <div class="catalog__tab-img">
+                    <img src="@img/for-clients/market.png" alt="market">
+                </div>
+            </div>
+            <div class="catalog__tab">
+                <div class="catalog__tab-wrapper">
+                    <div class="catalog__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
+                        условия
+                        сорудничества. <br><br>
+                        Мы готовы рассмотреть особые
+                        условия для оптовых покупателей, с готовностью идем на встречу
+                        к любому предложению. <br><br>
+                        Особые условия подготовленны для розничных магазинов.
+                        компаний HoReCa, спорт-клубов. <br><br>
+                        Если вы заинтересованы в нашей продукции, пишите
+                        или звоните
+                        в наш главный офис, мы всегда пойдем <br>
+                        вам на встречу.
+                    </div>
+                    <a href="#" class="catalog__tab-link">Написать нам</a>
+                </div>
+                <div class="catalog__tab-img">
+                    <img src="@img/for-clients/market.png" alt="market">
                 </div>
             </div>
         </div>
@@ -218,7 +216,7 @@
     @@include('html/script.html', {})
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/script.eco.js"></script>
-    <script src="js/script.catalog.js"></script>
+    <script src="js/script.for-client.js"></script>
 </body>
 
 </html>
