--- a/src/html/mini-news.html
+++ b/src/html/mini-news.html
@@ -1,4 +1,4 @@
-<section class="mini-news">
+<section class="mini-news @@theme">
     <div class="mini-news__container">
         <div class="mini-news__wrapper">
             <h2 class="mini-news__title">
