Made the layout for the page

--- a/src/news.html
+++ b/src/news.html
@@ -46,7 +46,7 @@
                         зарабатывать десятки тысяч долларов в год всего <br>
                         на нескольких гектарах земли.
                     </div>
-                    <a href="#" class="main-news__article-link">
+                    <a href="@html/one-news.html" class="main-news__article-link">
                         Читать
                         <div class="main-news__article-link-img">
                             <img src="@icons/arrow-link.svg" alt="arrow-link">
