--- a/src/one-news.html
+++ b/src/one-news.html
@@ -97,22 +97,60 @@
                     Последние
                     публикации
                 </div>
-                <div class="aside__item">
-                    <div class="aside__img">
-                        <img src="@img/one-news/saplings.png" alt="saplings">
-                    </div>
-                    <div class="aside__date">
-                        12.04.2019
-                    </div>
-                    <div class="aside__article">
-                        Центр поддержки экспорта,
-                        в студии Павел Тулба
-                    </div>
-                    <div class="aside__link">
-                        Читать
-                        <div class="aside__link-img">
-                            <img src="@icons/arrow-link.svg" alt="arrow-link">
+                <div class="aside__item-group">
+                    <div class="aside__item">
+                        <div class="aside__img">
+                            <img src="@img/one-news/saplings.png" alt="saplings">
                         </div>
+                        <div class="aside__date">
+                            12.04.2019
+                        </div>
+                        <div class="aside__article">
+                            Центр поддержки экспорта,
+                            в студии Павел Тулба
+                        </div>
+                        <a href="#" class="aside__link">
+                            Читать
+                            <div class="aside__link-img">
+                                <img src="@icons/arrow-link.svg" alt="arrow-link">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="aside__item">
+                        <div class="aside__img">
+                            <img src="@img/one-news/nuts.png" alt="nuts">
+                        </div>
+                        <div class="aside__date">
+                            12.04.2019
+                        </div>
+                        <div class="aside__article">
+                            Центр поддержки экспорта,
+                            в студии Павел Тулба
+                        </div>
+                        <a href="#" class="aside__link">
+                            Читать
+                            <div class="aside__link-img">
+                                <img src="@icons/arrow-link.svg" alt="arrow-link">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="aside__item">
+                        <div class="aside__img">
+                            <img src="@img/one-news/newsman.png" alt="man">
+                        </div>
+                        <div class="aside__date">
+                            12.04.2019
+                        </div>
+                        <div class="aside__article">
+                            Центр поддержки экспорта,
+                            в студии Павел Тулба
+                        </div>
+                        <a href="#" class="aside__link">
+                            Читать
+                            <div class="aside__link-img">
+                                <img src="@icons/arrow-link.svg" alt="arrow-link">
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -127,13 +165,13 @@
                 </div>
                 <div class="aside__social">
                     <a href="#" class="aside__social-item">
-                        <img src="@icons/header-footer/social/facebook.svg" alt="facebook">
+                        <img src="@icons/one-news/facebook.svg" alt="facebook">
                     </a>
                     <a href="#" class="aside__social-item">
-                        <img src="@icons/header-footer/social/instagram.svg" alt="instagram">
+                        <img src="@icons/one-news/instagram.svg" alt="instagram">
                     </a>
                     <a href="#" class="aside__social-item">
-                        <img src="@icons/header-footer/social/youtube.svg" alt="youtube">
+                        <img src="@icons/one-news/youtube.svg" alt="youtube">
                     </a>
                 </div>
             </div>
