Made a 'Gallery' page

--- a/src/about-company.html
+++ b/src/about-company.html
@@ -67,7 +67,7 @@
         </div>
     </section>
     @@include('html/info.html', {})
-    @@include('html/gallery.html', {mod: 'gallery__group-item_hidden'})
+    @@include('html/gallery.html', {mod: 'gallery_hidden'})
     @@include('html/eco.html', {})
     @@include('html/mini-news.html')
     @@include('html/footer.html', {})
